<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 Phenix Real Time Solutions, Inc. Confidential and Proprietary. All rights reserved.
  -->

<resources>
    <string name="debug_failed_to_collect_logs">Failed to collect application logs</string>
    <string name="debug_about">About</string>
    <string name="debug_app_version">App version: %1$s build: %2$d</string>
    <string name="debug_sdk_version">SDK version: %1$s build: %2$d</string>
    <string name="debug_share_app_logs">Share App logs</string>
    <string name="debug_close">Close</string>
    <string name="debug_ok">OK</string>
</resources>
